# sukkiri

./: Cargo.toml  README.md
.agent/: rules.md
.claude/commands/: check.md
.codex/: config.toml
.github/workflows/: publish.yml
docs/: PRD.md
src/: allowlist.rs  cleaner.rs  constants.rs  main.rs  model.rs  scanner.rs  scanner_helpers.rs
src/scanner/: browsers.rs  dev.rs  docker.rs  mod.rs  trash.rs  user.rs  utils.rs  xcode.rs
src/ui/: app.rs  components.rs  mod.rs
