[package]
name = "rust-mac-sweep"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
humansize = "2.1.3"
indicatif = "0.18.3"
jwalk = "0.8.1"
ratatui = "0.30.0"
rayon = "1.11.0"
sysinfo = "0.37.2"
trash = "5.2.5"

[dev-dependencies]
tempfile = "3.24.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "allow"
cargo = "allow"
