[package]
name = "sukkiri"
version = "0.1.1"
edition = "2024"
authors = ["mmrakt"]
description = "A lightweight TUI disk cleanup tool for macOS"
license = "MIT"
repository = "https://github.com/mmrakt/sukkiri"
readme = "README.md"
keywords = ["macos", "cleanup", "tui", "cli", "utility"]
categories = ["command-line-utilities", "os::macos-apis"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
humansize = "2.1.3"
indicatif = "0.18.3"
jwalk = "0.8.1"
ratatui = "0.29.0"
rayon = "1.11.0"
sysinfo = "0.37.2"

[dev-dependencies]
tempfile = "3.24.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "allow"
cargo = "allow"
